tests/errors/inst/bad_expression_after_param 2.s
.name "Zork"
.comment "Hello, i'm Zork"          

and r1, r1, r1 end 
ld %0, r16
live:
live %1
zjmp %:live
